# MAUHD-accountcheck

./: .gitignore  main.js  package-lock.json  package.json
mainR/: Cargo.toml
mainR/src/: main.rs
