[package]
name = "mainR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fantoccini = "0.19.3"
reqwest = "0.11.22"
scraper = "0.18.1"
tokio = { version = "1", features = ["full"] }
